test/cherry/Language/dynamic_tensor_type_error.cherry
# RUN: not cherry-driver -typecheck %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  var staticTensor: Float32[2, 3] =
    [[0.0, 0.1, 0.2], [0.3, 0.4, 0.5]];
  const dynamicTensor: Float32[?, ?] = staticTensor;
  const badTensor: Float32[2, 3] = dynamicTensor;

  0
}

# CHECK: error: type mismatch
